need purl: false to suppress chunks from R script

--- a/training/ForestsAndFire.qmd
+++ b/training/ForestsAndFire.qmd
@@ -21,6 +21,7 @@ estimated RAM for executing**
 #| include: false
 #| eval: true
 #| cache: false
+#| purl: false
 
 ## truncate text output
 hook_output <- knitr::knit_hooks$get("output")
