--- a/training/Caching.qmd
+++ b/training/Caching.qmd
@@ -16,6 +16,7 @@ editor_options:
 
 ```{r setup, include = FALSE}
 #| cache: true
+#| purl: false
 SuggestedPkgsNeeded <- c("terra")
 hasSuggests <- all(sapply(SuggestedPkgsNeeded, require, character.only = TRUE, quietly = TRUE))
 useSuggests <- !(tolower(Sys.getenv("_R_CHECK_DEPENDS_ONLY_")) == "true")
