--- a/training/debugging.qmd
+++ b/training/debugging.qmd
@@ -14,6 +14,10 @@ execute:
 
 # Debugging SpaDES Modules {#sec-debugging}
 
+::: {.callout-tip appearance="simple"}
+See [Barebones R script] for the code shown in this chapter
+:::
+
 ```{r setup}
 #| include: false
 #| eval: true
@@ -237,3 +241,21 @@ An example of debugging a more complex SpaDES workflow in
 
 [How to make a
 reprex](https://www.r-bloggers.com/2020/10/how-to-make-a-reprex/)
+
+
+## Barebones R script
+
+```{r}
+#| eval: true
+#| echo: false
+#| purl: false
+
+fileName <- file.path("R/Chapter_scripts", sub("rmarkdown", "R", knitr::current_input()))
+```
+
+```{r file = fileName}
+#| eval: false
+#| echo: true
+#| purl: false
+
+```
