--- a/training/Caching.qmd
+++ b/training/Caching.qmd
@@ -14,9 +14,12 @@ editor_options:
   chunk_output_type: console
 ---
 
-```{r setup, include = FALSE}
+```{r setup}
 #| cache: true
+#| eval: true
+#| echo: false
 #| purl: false
+
 SuggestedPkgsNeeded <- c("terra")
 hasSuggests <- all(sapply(SuggestedPkgsNeeded, require, character.only = TRUE, quietly = TRUE))
 useSuggests <- !(tolower(Sys.getenv("_R_CHECK_DEPENDS_ONLY_")) == "true")
