--- a/training/bestPractices.qmd
+++ b/training/bestPractices.qmd
@@ -8,7 +8,9 @@ editor_options:
 bibliography: references/references.bib
 ---
 
-```{r setup, include = FALSE}
+```{r setup}
+#| include: false
+
 knitr::opts_chunk$set(eval = FALSE)
 ```
 
